crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@245.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table ab_a2_b2 partition of ab_a2 for values in (2);
---
CreateStmt@0..59
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "ab_a2_b2"
  Whitespace@21..22 " "
  Partition@22..31 "partition"
  Whitespace@31..32 " "
  Of@32..34 "of"
  Whitespace@34..35 " "
  RangeVar@35..40
    Ident@35..40 "ab_a2"
  Whitespace@40..41 " "
  For@41..44 "for"
  Whitespace@44..45 " "
  Values@45..51 "values"
  Whitespace@51..52 " "
  PartitionBoundSpec@52..57
    InP@52..54 "in"
    Whitespace@54..55 " "
    Ascii40@55..56 "("
    AConst@56..57
      Iconst@56..57 "2"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

