crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@247.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table ab_a1 partition of ab for values in(1) partition by list (b);
---
CreateStmt@0..74
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..18
    Ident@13..18 "ab_a1"
  Whitespace@18..19 " "
  Partition@19..28 "partition"
  Whitespace@28..29 " "
  Of@29..31 "of"
  Whitespace@31..32 " "
  RangeVar@32..34
    Ident@32..34 "ab"
  Whitespace@34..35 " "
  For@35..38 "for"
  Whitespace@38..39 " "
  Values@39..45 "values"
  Whitespace@45..46 " "
  PartitionBoundSpec@46..50
    InP@46..48 "in"
    Ascii40@48..49 "("
    AConst@49..50
      Iconst@49..50 "1"
  Ascii41@50..51 ")"
  Whitespace@51..52 " "
  PartitionSpec@52..72
    Partition@52..61 "partition"
    Whitespace@61..62 " "
    By@62..64 "by"
    Whitespace@64..65 " "
    Ident@65..69 "list"
    Whitespace@69..70 " "
    Ascii40@70..71 "("
    PartitionElem@71..72
      Ident@71..72 "b"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

